<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_poke"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:showAsAction="always"
        android:title="@string/add_poke" />
    <item
        android:id="@+id/delete_poke"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:showAsAction="always"
        android:title="@string/delete_poke" />
    <item
        android:id="@+id/advanced_search"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="Advanced Search" />
    <item
        android:id="@+id/egg_groups"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="Egg Groups" />
    <item
        android:id="@+id/quick_check"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:title="@string/quick_check" />

</menu>