<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_header"
        android:src="@drawable/ichooseyou" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:nestedScrollingEnabled="false">

        <TableRow>

            <Button
                android:id="@+id/libraryBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/library"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pokedexBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/dex"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/movesBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/moves"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/abilityBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/abilitiesBtn"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/typeChartBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/type_chartBtn"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/calcBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="Calculator"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/itemsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="Items"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/aboutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/about"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:gravity="bottom"-->
    <!--android:layout_gravity="bottom"-->
    <!--android:orientation="vertical">-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="5dp"-->
    <!--android:background="@color/material_blue_grey_900"></View>-->

    <!--<com.google.android.gms.ads.AdView-->
    <!--android:id="@+id/adView"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--ads:adSize="SMART_BANNER"-->
    <!--ads:adUnitId="@string/ad_home">-->

    <!--</com.google.android.gms.ads.AdView>-->

    <!--</LinearLayout>-->

</LinearLayout>